<resources>
    <string name="app_name">BudgetApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">%1$s</string>
    <string name="app_bar">%1$s</string>

    <!-- Dashboard strings -->

    <!-- Settings strings -->
    <string name="title_settings">Settings</string>
    <string name="edit_net_income_hint">Enter your net income</string>

    <!-- Entry strings -->
    <string name="edit_bill_name_hint">Name of bill</string>
    <string name="edit_bill_cost_hint">Cost of bill</string>
    <string name="text_bill_due">Bill is due on</string>
    <string name="edit_expense_name_hint">Name of expense</string>
    <string name="edit_expense_limit_hint">Limit of expense</string>
    <string name="text_expense_type">Select expense category</string>

    <!-- Button strings -->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="spend_button">Spend</string>

    <!-- Bill strings -->
    <string name="text_list_view_bill_name">%1$s</string>
    <string name="text_list_view_bill_cost">Cost: %1$s</string>
    <string name="text_list_view_bill_due">Due on %1$s</string>
    <string name="text_list_view_bill_paid">Paid</string>

    <!-- Expense Strings -->
    <string name="text_list_view_expense_name">%1$s</string>
    <string name="text_list_view_expense_status">You have spent $%1$s out of your $%2$s limit.</string>

    <!-- Alert dialog expense spend strings -->
    <string name="ad_expense_spend_tv_title">How much did you spend?.</string>
    <string name="ad_expense_spend_et">$0.00</string>
</resources>
