<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/alert_dialog_expense_spend_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad_expense_spend_tv_title"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_alert_dialog_expense_spend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/ad_expense_spend_et"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_expense_spend_title"/>

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/btn_alert_dialog_expense_spend_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="@dimen/fontSizeSmall"
        app:layout_constraintTop_toBottomOf="@+id/et_alert_dialog_expense_spend"
        app:layout_constraintEnd_toStartOf="@+id/btn_alert_dialog_expense_spend_save"/>

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/btn_alert_dialog_expense_spend_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textSize="@dimen/fontSizeSmall"
        app:layout_constraintTop_toBottomOf="@+id/et_alert_dialog_expense_spend"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>