<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_bill_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_bill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_bill_name_hint"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_bill_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/text_layout_bill_name">

        <EditText
            android:id="@+id/edit_bill_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_bill_cost_hint"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/date_picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fontSizeMedium"
        android:text="@string/text_bill_due"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/text_layout_bill_cost"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_bill_due"/>

    <DatePicker
        android:id="@+id/date_picker_bill_due"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/date_picker_title">

    </DatePicker>
</android.support.constraint.ConstraintLayout>